adding verification email support

--- a/.env-exmaple
+++ b/.env-exmaple
@@ -11,3 +11,5 @@ API_HOSTNAME=:8100
 ENABLE_API=true
 FUND_WALLET_AMOUNT=100.00
 DATA_PATH=/home/andrew/go/src/github.com/AndrewDonelson/go-basic-blockchain/test_data
+GMAIL_EMAIL=nlaakstudios@gmail.com
+GMAIL_PASSWORD=PASSWORD
